mas cambios jeje

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <div class="team-member">
                         <h4><strong>Integrantes</strong></h4>
                         <p class="text-faded mb-0">Danilo José Portillo Portillo</p>
-                        <p class="text-faded mb-0">Humberto José Orellana</p>
-                        <p class="text-faded mb-0">Yessenia Elizabeth Mateo</p>
+                        <p class="text-faded mb-0">Humberto José Orellana Colindres</p>
+                        <p class="text-faded mb-0">Yessenia Elizabeth Mateo López</p>
                         <p class="text-faded mb-0">Andy Alexis Jiménez Arana</p>
                         <p class="text-faded mb-0">Jose Pablo Muñoz Melgar</p>
                     </div>
