cambios en la descipcion del proyecto

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
                         <h1>Información</h1>
-                        <h2>En este proyecto de Seguridad de Redes TCP/IP, se ha diseñado e implementado una infraestructura de red segura en la nube. 
+                        <h2>En este proyecto de Seguridad de Redes TCP/IP, se ha diseñado e implementado una infraestructura de red segura en la nube utilizando AWS. 
                             Cuyo objetivo es evaluar tanto la robustez como la capacidad defensiva de la red mediante simulaciones de ataque y defensa. 
-                            En su cofiguración destaca la conectividad pública y VPN como también la integración de elementos de seguridad como IDS/IPS y un firewall.
+                            En su cofiguración destaca la conectividad pública y VPN como también la integración de elementos de seguridad como IDS/IPS, WAF (Web Application Firewall)
+                            y CloudWatch para el monitoreo.
                         </h2>
                     </div>
                 </div>
