Cambios en lo nombres de los integrantes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p class="text-faded mb-0">Humberto José Orellana Colindres</p>
                         <p class="text-faded mb-0">Yessenia Elizabeth Mateo López</p>
                         <p class="text-faded mb-0">Andy Alexis Jiménez Arana</p>
-                        <p class="text-faded mb-0">Jose Pablo Muñoz Melgar</p>
+                        <p class="text-faded mb-0">José Pablo Muñoz Melgar</p>
                     </div>
                 </div>
             </div>
